--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>images card</h1>
         <div class="mainDiv"></div>
         <div class="main">
             <div class="navy"></div>
